<resources>
    <string name="app_name">INEV2</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>
    <string name="item5">Item5</string>
    <string name="item6">Item6</string>
    <string name="item7">Item7</string>
    <string name="item8">Item8</string>
    <string name="item9">Item9</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>

    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="informe1">Fragment informe prueba</string>
    <string name="title_activity_main2">Main2</string>
    <string name="title_activity_informe">InformeActivity</string>
</resources>
